# aoc

./: README.md
2020/go/day10/: main.go
2020/go/day2/: main.go
2020/go/day4/: main.go
2020/go/day7/: input.txt  main.go
2020/go/day9/: main.go
2020/src/: CMakeLists.txt
2020/src/day1/: main.cpp
2020/src/day5/: CMakeLists.txt  main.cpp
2020/src/day6/: CMakeLists.txt
2020/src/day7/: CMakeLists.txt
2021/1/: main.go
2021/2/: main.go
2021/3/: main.go
2021/4/: main.go  t.txt
2021/5/: main.go
2021/6/: main.go
2021/7/: main.go
2021/8/: main.go
2021/9/: main.go
go/day1/: main.go
go/day10/: ;
go/day11/: main.go
go/day3/: main.go
go/day5/: input.txt  main.go
go/day6/: main.go
go/day7/: main.go
go/day8/: main.go
src/: CMakeLists.txt
src/day1/: CMakeLists.txt
src/day10/: CMakeLists.txt  main.cpp
src/day11/: CMakeLists.txt  input.txt  main.cpp
src/day2/: CMakeLists.txt  main.cpp
src/day3/: CMakeLists.txt  main.cpp
src/day4/: CMakeLists.txt  main.cpp
src/day5/: main.cpp
src/day6/: main.cpp
src/day7/: main.cpp
src/day8/: CMakeLists.txt  main.cpp
src/day9/: CMakeLists.txt  main.cpp
